--- a/inte/scss/base/_base.scss
+++ b/inte/scss/base/_base.scss
@@ -190,6 +190,7 @@ img{
 }
 
 figure{
+    max-width: 100%;
     margin: 2.5em 0;
     text-align: center;
     &.aligncenter{
