--- a/inte/scss/components/_gallery.scss
+++ b/inte/scss/components/_gallery.scss
@@ -23,6 +23,7 @@
         cursor: grab;
         cursor: -moz-grab;
         cursor: -webkit-grab;
+        z-index: auto !important; // override tweenmax z-index of 1001 ?
         &:before{
             // to be above the links, so we can drag the entire zone
             content: '';
